OTP pin validatation & permission
 - OTP pin validation for length of 6
 - Asking for permissions to the user
 - Ted permission library added.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -269,5 +269,7 @@ dependencies {
     // Image labeling custom
     implementation 'com.google.mlkit:image-labeling-custom:16.2.0'
 
+    implementation 'gun0912.ted:tedpermission:2.2.3'
+
 }
 //apply plugin: 'com.google.gms.google-services'
